added the toc of the documentation

--- a/syncfusion-cody.html
+++ b/syncfusion-cody.html
@@ -1,4 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
-    
+    <li>
+        <a href="/syncfusion-cody/Welcome-to-Cody">Welcome to Cody</a>
+    </li>
+    <li>Installation
+        <ul>
+            <li>
+                <a href="/syncfusion-cody/get-started/Windows">Windows</a>
+            </li>
+            <li>
+                <a href="/syncfusion-cody/get-started/Mac">Mac</a>
+            </li>
+        </ul>
+
+    </li>
+    <li>Features
+        <ul>
+           <li>
+            <a href="/syncfusion-cody/features/Autocomplete">Autocomplete</a>
+           </li>
+           <li>
+            <a href="/syncfusion-cody/features/Chat">Chat</a>
+           </li>
+           <li>
+            <a href="/syncfusion-cody/features/Edit">Edit</a>
+           </li>
+           <li>
+            <a href="/syncfusion-cody/features/Agent">Agent</a>
+           </li>
+        </ul>
+    </li>
+    <li> 
+      <a href="/syncfusion-cody/reference/Configure-the-Cody">Configure the Cody</a>
+      <ul>
+        <li><a href="/syncfusion-cody/reference/configure-properties/models">Models</a></li>
+        <li><a href="/syncfusion-cody/reference/configure-properties/context">Context</a></li>
+        <li><a href="/syncfusion-cody/reference/configure-properties/rules">Rules</a></li>
+        <li><a href="/syncfusion-cody/reference/configure-properties/prompts">Prompts</a></li>
+        <li><a href="/syncfusion-cody/reference/configure-properties/docs">Docs></a></li>
+        <li><a href="/syncfusion-cody/reference/configure-properties/mcpServers">Mcp Servers</a></li>
+      </ul>
+    </li>
 </ul>
