updated the release notes

--- a/syncfusion-cody-toc.html
+++ b/syncfusion-cody-toc.html
@@ -41,4 +41,11 @@
         <li><a href="/syncfusion-cody/reference/configure-properties/mcpServers">Mcp Servers</a></li>
       </ul>
     </li>
+    <li>Release Notes
+        <ul>
+        <li>
+              <a href="/syncfusion-cody/release-notes/v0.1.0.md">Cody v0.1.0</a>
+        </li>
+        </ul>
+    </li>
 </ul>
