--- a/syncfusion-cody-toc.html
+++ b/syncfusion-cody-toc.html
@@ -44,7 +44,7 @@
     <li>Release Notes
         <ul>
         <li>
-              <a href="/syncfusion-cody/release-notes/v0.1.0.md">Cody v0.1.0</a>
+              <a href="/syncfusion-cody/release-notes/v0.1.0.md">v0.1.0</a>
         </li>
         </ul>
     </li>
