--- a/syncfusion-cody-toc.html
+++ b/syncfusion-cody-toc.html
@@ -37,7 +37,7 @@
         <li><a href="/syncfusion-cody/reference/configure-properties/context">Context</a></li>
         <li><a href="/syncfusion-cody/reference/configure-properties/rules">Rules</a></li>
         <li><a href="/syncfusion-cody/reference/configure-properties/prompts">Prompts</a></li>
-        <li><a href="/syncfusion-cody/reference/configure-properties/docs">Docs></a></li>
+        <li><a href="/syncfusion-cody/reference/configure-properties/docs">Docs</a></li>
         <li><a href="/syncfusion-cody/reference/configure-properties/mcpServers">Mcp Servers</a></li>
       </ul>
     </li>
