--- a/syncfusion-code-studio-toc.html
+++ b/syncfusion-code-studio-toc.html
@@ -117,7 +117,7 @@
     <li>Release Notes
         <ul>
         <li>
-              <a href="/syncfusion-code-studio/release-notes/v0.1.0.md">v0.1.0</a>
+              <a href="/syncfusion-code-studio/release-notes/v0.1.0">v0.1.0</a>
         </li>
         </ul>
     </li>
