--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -28,6 +28,9 @@
            <li>
             <a href="/code-studio/features/Agent">Agent</a>
            </li>
+            <li>
+            <a href="/code-studio/features/Telemetry">Telemetry</a>
+           </li>
            <li>Context providers
                 <ul>
                     <li>
