checkpoints feature and images added

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -28,6 +28,10 @@
            <li>
             <a href="/code-studio/features/Agent">Agent</a>
            </li>
+           <li>
+            <a href="/code-studio/features/Checkpoints">Checkpoints</a>
+           </li>
+
            <li>Context providers
                 <ul>
                     <li>
