--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -31,6 +31,9 @@
            <li>
             <a href="/code-studio/features/Checkpoints">Checkpoints</a>
            </li>
+            <li>
+            <a href="/code-studio/features/Telemetry">Telemetry</a>
+           </li>
 
            <li>Context providers
                 <ul>
