Checkpoints feature and imgs added

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -29,6 +29,9 @@
             <a href="/code-studio/features/Agent">Agent</a>
            </li>
             <li>
+            <a href="/code-studio/features/Checkpoints">Checkpoints</a>
+           </li>
+            <li>
             <a href="/code-studio/features/Telemetry">Telemetry</a>
            </li>
            <li>Context providers
