--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -34,6 +34,9 @@
             <li>
             <a href="/code-studio/features/Telemetry">Telemetry</a>
            </li>
+           <li>
+            <a href="/code-studio/features/Memory">Memory</a>
+           </li>
            <li>Context providers
                 <ul>
                     <li>
