--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -129,6 +129,9 @@
         <li>
               <a href="/code-studio/release-notes/v0.1.0">v0.1.0</a>
         </li>
+        <li>
+              <a href="/code-studio/release-notes/v0.2.0">v0.2.0</a>
+        </li>
         </ul>
     </li>
 </ul>
