Added troubleshoot folder and openai o3 model integration document

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -134,4 +134,12 @@
         </li>
         </ul>
     </li>
+     <li>Troubleshoot
+        <ul>
+            <li>
+                <a href="/code-studio/troubleshoot/openai-integration">OpenAI O3 Model Integration</a>
+            </li>
+        </ul>
+
+    </li>
 </ul>
