Added model in title

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -137,7 +137,7 @@
      <li>Troubleshoot
         <ul>
             <li>
-                <a href="/code-studio/troubleshoot/openai-integration">OpenAI O3 Model Integration</a>
+                <a href="/code-studio/troubleshoot/openai-integration">How to configure O3 model in OpenAI Integration via OpenRouter</a>
             </li>
         </ul>
 
