Code Studio Docs

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -37,6 +37,12 @@
            <li>
             <a href="/code-studio/features/Memory">Memory</a>
            </li>
+           <li>
+            <a href="/code-studio/features/Inline">Inline Edits</a>
+           </li>
+           <li>
+            <a href="/code-studio/features/askcodestudio">Ask Code Studio</a>
+           </li>
 
            <li>Context providers
                 <ul>
@@ -119,9 +125,12 @@
         <li><a href="/code-studio/reference/configure-properties/models">Models</a></li>
         <li><a href="/code-studio/reference/configure-properties/context">Context</a></li>
         <li><a href="/code-studio/reference/configure-properties/rules">Rules</a></li>
-        <li><a href="/code-studio/reference/configure-properties/prompts">Prompts</a></li>
+        <li><a href="/code-studio/reference/configure-properties/Prompt">Prompts</a></li>
         <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
         <li><a href="/code-studio/reference/configure-properties/mcpServers">MCP Servers</a></li>
+        <li><a href="/code-studio/reference/configure-properties/Usersettings">User Settings</a></li>
+        <li><a href="/code-studio/reference/configure-properties/Tools">Tools</a></li>
+       
       </ul>
     </li>
     <li>Release Notes
