overview changes added

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -139,7 +139,7 @@
     <li>
         <a href="/code-studio/reference/Configure-the-Code-Studio">Configure the Syncfusion Code Studio</a>
         <ul>
-            <li>
+            <li>MCP
                 <ul>
                     <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
                     <li><a href="/code-studio/reference/configure-properties/mcp/customServers">Custom Servers</a></li>
