changes added in toc file

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -83,8 +83,7 @@
                         <ul>
                             <li>
                                 <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/How-to-configure-more-contextproviders">How
-                                    to configure context providers</a>
+                                    href="/code-studio/features/context-providers/add-more-contextproviders/How-to-configure-more-contextproviders">How to configure context providers</a>
                             </li>
                             <li>
                                 <a
@@ -104,8 +103,7 @@
                             </li>
                             <li>
                                 <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Github-issues">Github
-                                    issues</a>
+                                    href="/code-studio/features/context-providers/add-more-contextproviders/Github-issues">Github issues</a>
                             </li>
                             <li>
                                 <a
@@ -163,8 +161,7 @@
     <li>Troubleshoot
         <ul>
             <li>
-                <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3
-                    model in OpenAI Integration via OpenRouter</a>
+                <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3 model in OpenAI Integration via OpenRouter</a>
             </li>
         </ul>
 
