--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -11,6 +11,10 @@
             <li>
                 <a href="/code-studio/get-started/Mac">Mac</a>
             </li>
+            <li>
+                <a href="/code-studio/get-started/Signin">Onboarding</a>
+            </li>
+
         </ul>
 
     </li>
@@ -49,6 +53,10 @@
             <li>
                 <a href="/code-studio/features/Enhanceprompt">Enhance Prompt</a>
             </li>
+             <li>
+                <a href="/code-studio/features/Summarize">Summarization</a>
+            </li>
+
 
             <li>Context providers
                 <ul>
