Included the UI builder UG documentation.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -79,6 +79,9 @@
                     <li>
                         <a href="/code-studio/features/context-providers/Terminal">Terminal</a>
                     </li>
+                    <li>
+                        <a href="/code-studio/features/context-providers/UI-Builder.md">UI Builder</a>
+                    </li>
                     <li>Add more context providers
                         <ul>
                             <li>
