--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -145,7 +145,12 @@
     <li>
         <a href="/code-studio/reference/Configure-the-Code-Studio">Configure the Syncfusion Code Studio</a>
         <ul>
-            
+             <li>MCP
+                <ul>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/customServers">Custom Servers</a></li>
+                </ul>
+            </li>
             <li><a href="/code-studio/reference/configure-properties/models">Models</a></li>
             <li><a href="/code-studio/reference/configure-properties/context">Context</a></li>
             <li><a href="/code-studio/reference/configure-properties/rules">Rules</a></li>
