--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -169,6 +169,9 @@
             <li>
                 <a href="/code-studio/release-notes/v0.2.0">v0.2.0</a>
             </li>
+             <li>
+                <a href="/code-studio/release-notes/v0.3.0">v0.3.0</a>
+            </li>
         </ul>
     </li>
     <li>Troubleshoot
