Updated the UG documentation content with images.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -87,9 +87,6 @@
                     <li>
                         <a href="/code-studio/features/context-providers/Terminal">Terminal</a>
                     </li>
-                    <li>
-                        <a href="/code-studio/features/context-providers/UI-Builder.md">UI Builder</a>
-                    </li>
                     <li>Add more context providers
                         <ul>
                             <li>
@@ -159,8 +156,14 @@
             <li><a href="/code-studio/reference/configure-properties/Prompt">Prompts</a></li>
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/Usersettings">User Settings</a></li>
-            <li><a href="/code-studio/reference/configure-properties/Tools">Tools</a></li>
-
+            <li>
+                <a href="/code-studio/reference/configure-properties/Tools">Tools</a>
+                <ul>
+                    <li>
+                        <a href="/code-studio/reference/configure-properties/tools/UI-Builder.md">UI Builder</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </li>
     <li>Release Notes
