enterprise server document

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -18,6 +18,29 @@
         </ul>
 
     </li>
+    <li>Enterprise Servers
+        <ul>
+            <li>
+                <a href="">Getting Started</a>
+            </li>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+            <li>
+                <a href="">Configure LLM providers and models</a>
+            </li>
+             <li>
+                <a href="">Manage user & Teams</a>
+            </li>
+             <li>
+                <a href="">Create Budget </a>
+            </li>
+             <li>
+                <a href="">Fallback policy configuration</a>
+            </li>
+             
+        </ul>
+    </li>
     <li>Features
         <ul>
             <li>
