Added documentation for new features for v0.3.0 release and enterprise document

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -11,8 +11,35 @@
             <li>
                 <a href="/code-studio/get-started/Mac">Mac</a>
             </li>
+            <li>
+                <a href="/code-studio/get-started/Signin">Onboarding</a>
+            </li>
+
         </ul>
 
+    </li>
+    <li>Enterprise Servers
+        <ul>
+            <li>
+                <a href="">Getting Started</a>
+            </li>
+            <li>
+                <a href="">Dashboard</a>
+            </li>
+            <li>
+                <a href="">Configure LLM providers and models</a>
+            </li>
+             <li>
+                <a href="">Manage user & Teams</a>
+            </li>
+             <li>
+                <a href="">Create Budget </a>
+            </li>
+             <li>
+                <a href="">Fallback policy configuration</a>
+            </li>
+             
+        </ul>
     </li>
     <li>Features
         <ul>
@@ -49,6 +76,11 @@
             <li>
                 <a href="/code-studio/features/Enhanceprompt">Enhance Prompt</a>
             </li>
+             <li>
+                <a href="/code-studio/features/Summarize">Summarization</a>
+            </li>
+
+
             <li>Context providers
                 <ul>
                     <li>
@@ -122,6 +154,9 @@
                             <li>
                                 <a href="/code-studio/features/context-providers/add-more-contextproviders/Web">Web</a>
                             </li>
+
+
+
                         </ul>
                     </li>
 
@@ -133,9 +168,13 @@
     <li>
         <a href="/code-studio/reference/Configure-the-Code-Studio">Configure the Syncfusion Code Studio</a>
         <ul>
-            
+             <li>MCP
+                <ul>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/customServers">Custom Servers</a></li>
+                </ul>
+            </li>
             <li><a href="/code-studio/reference/configure-properties/models">Models</a></li>
-            <li><a href="/code-studio/reference/configure-properties/context">Context</a></li>
             <li><a href="/code-studio/reference/configure-properties/rules">Rules</a></li>
             <li><a href="/code-studio/reference/configure-properties/Prompt">Prompts</a></li>
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
@@ -151,6 +190,9 @@
             </li>
             <li>
                 <a href="/code-studio/release-notes/v0.2.0">v0.2.0</a>
+            </li>
+             <li>
+                <a href="/code-studio/release-notes/v0.3.0">v0.3.0</a>
             </li>
         </ul>
     </li>
