Added path in toc file

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -21,22 +21,22 @@
     <li>Enterprise Servers
         <ul>
             <li>
-                <a href="">Getting Started</a>
+                <a href="/code-studio/enterprise-server/getting-started">Getting Started</a>
             </li>
             <li>
-                <a href="">Dashboard</a>
+                <a href="/code-studio/enterprise-server/dashboard">Dashboard</a>
             </li>
             <li>
-                <a href="">Configure LLM providers and models</a>
+                <a href="/code-studio/enterprise-server/providers&models">Configure LLM Providers and Models</a>
             </li>
              <li>
-                <a href="">Manage user & Teams</a>
+                <a href="/code-studio/enterprise-server/user&teams">Manage User & Teams</a>
             </li>
              <li>
-                <a href="">Create Budget </a>
+                <a href="/code-studio/enterprise-server/createbudget">Create Budget </a>
             </li>
              <li>
-                <a href="">Fallback policy configuration</a>
+                <a href="/code-studio/enterprise-server/fallback">Fallback policy configuration</a>
             </li>
              
         </ul>
