--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -27,10 +27,10 @@
                 <a href="/code-studio/enterprise-server/dashboard">Dashboard</a>
             </li>
             <li>
-                <a href="/code-studio/enterprise-server/providers&models">Configure LLM Providers and Models</a>
+                <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and Models</a>
             </li>
              <li>
-                <a href="/code-studio/enterprise-server/user&teams">Manage User & Teams</a>
+                <a href="/code-studio/enterprise-server/userandteams">Manage User & Teams</a>
             </li>
              <li>
                 <a href="/code-studio/enterprise-server/createbudget">Create Budget </a>
