--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -174,7 +174,7 @@
                 <a href="/code-studio/reference/configure-properties/Tools">Tools</a>
                 <ul>
                     <li>
-                        <a href="/code-studio/reference/configure-properties/ui-builder/UI-Builder.md">UI Builder</a>
+                        <a href="/code-studio/reference/configure-properties/ui-builder/UI-Builder">UI Builder</a>
                     </li>
                 </ul>
             </li>
