Prepared the UG documentation for the UI Builder in the Code Studio.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -140,8 +140,14 @@
             <li><a href="/code-studio/reference/configure-properties/Prompt">Prompts</a></li>
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/Usersettings">User Settings</a></li>
-            <li><a href="/code-studio/reference/configure-properties/Tools">Tools</a></li>
-
+            <li>
+                <a href="/code-studio/reference/configure-properties/Tools">Tools</a>
+                <ul>
+                    <li>
+                        <a href="/code-studio/reference/configure-properties/tools/UI-Builder">UI Builder</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </li>
     <li>Release Notes
