Added enterprise server and release notes changes

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -21,22 +21,22 @@
     <li>Enterprise Servers
         <ul>
             <li>
-                <a href="">Getting Started</a>
+                <a href="/code-studio/enterprise-server/getting-started">Getting Started</a>
             </li>
             <li>
-                <a href="">Dashboard</a>
+                <a href="/code-studio/enterprise-server/dashboard">Dashboard</a>
             </li>
             <li>
-                <a href="">Configure LLM providers and models</a>
+                <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and Models</a>
             </li>
              <li>
-                <a href="">Manage user & Teams</a>
+                <a href="/code-studio/enterprise-server/userandteams">Manage Users and Teams</a>
             </li>
              <li>
-                <a href="">Create Budget </a>
+                <a href="/code-studio/enterprise-server/createbudget">Create Budget </a>
             </li>
              <li>
-                <a href="">Fallback policy configuration</a>
+                <a href="/code-studio/enterprise-server/fallback">Fallback policy configuration</a>
             </li>
              
         </ul>
@@ -113,40 +113,31 @@
                     <li>Add more context providers
                         <ul>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/How-to-configure-more-contextproviders">How to configure context providers</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/How-to-configure-more-contextproviders">How to configure context providers</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Clipboard">Clipboard</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Clipboard">Clipboard</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Commit">Commit</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Commit">Commit</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Database">Database</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Database">Database</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Debugger">Debugger</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Debugger">Debugger</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Github-issues">Github issues</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Github-issues">Github issues</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Openfile">Openfile</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Openfile">Openfile</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/PostgreSQL">PostgreSQL</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/PostgreSQL">PostgreSQL</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/Search">Search</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/Search">Search</a>
                             </li>
                             <li>
                                 <a href="/code-studio/features/context-providers/add-more-contextproviders/URL">URL</a>
@@ -179,8 +170,14 @@
             <li><a href="/code-studio/reference/configure-properties/Prompt">Prompts</a></li>
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/Usersettings">User Settings</a></li>
-            <li><a href="/code-studio/reference/configure-properties/Tools">Tools</a></li>
-
+            <li>
+                <a href="/code-studio/reference/configure-properties/ToolsSupport">Tools</a>
+                <ul>
+                    <li>
+                        <a href="/code-studio/reference/configure-properties/tools/UI-Builder">UI Builder</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </li>
     <li>Release Notes
