Updated the UI-Builder path in the toc.html.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -56,6 +56,9 @@
                 <a href="/code-studio/features/Agent">Agent</a>
             </li>
             <li>
+                <a href="/code-studio/features/UI-Builder">UI Builder</a>
+            </li>
+            <li>
                 <a href="/code-studio/features/Checkpoints">Checkpoints</a>
             </li>
             <li>
@@ -170,14 +173,7 @@
             <li><a href="/code-studio/reference/configure-properties/Prompt">Prompts</a></li>
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/Usersettings">User Settings</a></li>
-            <li>
-                <a href="/code-studio/reference/configure-properties/ToolsSupport">Tools</a>
-                <ul>
-                    <li>
-                        <a href="/code-studio/reference/configure-properties/tools/UI-Builder">UI Builder</a>
-                    </li>
-                </ul>
-            </li>
+            <li><a href="/code-studio/reference/configure-properties/ToolsSupport">Tools</a></li>
         </ul>
     </li>
     <li>Release Notes
