Updated the changes.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -56,7 +56,7 @@
                 <a href="/code-studio/features/Agent">Agent</a>
             </li>
             <li>
-                <a href="/code-studio/features/UI-Builder">Agent</a>
+                <a href="/code-studio/features/UI-Builder">UI Builder</a>
             </li>
             <li>
                 <a href="/code-studio/features/Checkpoints">Checkpoints</a>
