Added the renamed changes.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -165,7 +165,7 @@
              <li>MCP
                 <ul>
                     <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
-                    <li><a href="/code-studio/reference/configure-properties/mcp/customservers1.md">Custom Servers</a></li>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/customservers">Custom Servers</a></li>
                 </ul>
             </li>
             <li><a href="/code-studio/reference/configure-properties/models">Models</a></li>
