EACCESS troubleshoot document

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -194,6 +194,9 @@
             <li>
                 <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3 model in OpenAI Integration via OpenRouter</a>
             </li>
+            <li>
+                <a href="/code-studio/troubleshoot/mcp-server-eaccess-issue-solution">How to Resolve EACCESS error</a>
+            </li>
         </ul>
 
     </li>
