rules, prompt, config mcp

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -165,6 +165,7 @@
              <li>MCP
                 <ul>
                     <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/configure-mcp-server">Configuring MCP Servers via YAML</a></li>
                     <li><a href="/code-studio/reference/configure-properties/mcp/customservers">Custom Servers</a></li>
                 </ul>
             </li>
@@ -195,7 +196,7 @@
                 <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3 model in OpenAI Integration via OpenRouter</a>
             </li>
             <li>
-                <a href="/code-studio/troubleshoot/mcp-server-eaccess-issue-solution">How to Resolve EACCESS error</a>
+                <a href="/code-studio/troubleshoot/resolve-mcp-server-eaccess-issue">How to Resolve EACCESS error</a>
             </li>
         </ul>
 
