Document for failed to parse assistant

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -198,6 +198,9 @@
             <li>
                 <a href="/code-studio/troubleshoot/resolve-mcp-server-eaccess-issue">How to Resolve EACCESS error</a>
             </li>
+             <li>
+                <a href="/code-studio/troubleshoot/resolve-failed-to-parse-assistant">How to Resolve Failed to Parse Assistant error</a>
+            </li>
         </ul>
 
     </li>
