--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -201,6 +201,9 @@
              <li>
                 <a href="/code-studio/troubleshoot/resolve-failed-to-parse-assistant">How to Resolve Failed to Parse Assistant error</a>
             </li>
+            <li>
+                <a href="/code-studio/troubleshoot/debug-dotnet-maui-applications">Debug .NET MAUI Applications</a>
+            </li>
         </ul>
 
     </li>
