--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -201,6 +201,13 @@
              <li>
                 <a href="/code-studio/troubleshoot/resolve-failed-to-parse-assistant">How to Resolve Failed to Parse Assistant error</a>
             </li>
+            <li> Application Debugging Steps
+                <ul>
+                    <li>
+                        <a href="/code-studio/troubleshoot/debugging-steps/desktop-platforms">How to Debug Desktop Platform Applications in WinForms, WPF, WinUI Platforms?</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
 
     </li>
