208282: Documentation Update: Add Blazor and AspCore Troubleshooting Guide.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -201,8 +201,15 @@
              <li>
                 <a href="/code-studio/troubleshoot/resolve-failed-to-parse-assistant">How to Resolve Failed to Parse Assistant error</a>
             </li>
-            <li>
-                <a href="/code-studio/troubleshoot/debug-dotnet-maui-applications">Debug .NET MAUI Applications</a>
+            <li>Running Applications
+                <ul>
+                    <li>
+                        <a href="/code-studio/troubleshoot/running-applications/cross-platform">Cross-Platform Applications</a>
+                    </li>
+                    <li>
+                        <a href="/code-studio/troubleshoot/running-applications/web-platform">Web Platform Applications</a>
+                    </li>
+                </ul>
             </li>
         </ul>
 
