--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -54,10 +54,7 @@
             </li>
             <li>
                 <a href="/code-studio/features/agent">Agent</a>
-            </li>
-            <li>
-                <a href="/code-studio/features/ui-builder">UI Builder</a>
-            </li>
+            </li>           
             <li>
                 <a href="/code-studio/features/checkpoints">Checkpoints</a>
             </li>
@@ -82,7 +79,7 @@
              <li>
                 <a href="/code-studio/features/summarize">Summarization</a>
             </li>
-
+            
 
             <li>Context providers
                 <ul>
@@ -159,6 +156,7 @@
             </li>
         </ul>
     </li>
+    <li> <a href="/code-studio/ui-builder">UI Builder</a> </li>
     <li>
         <a href="/code-studio/reference/configure-the-code-studio">Configure the Syncfusion Code Studio</a>
         <ul>
