--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -186,6 +186,9 @@
             <li>
                 <a href="/code-studio/release-notes/v0.1.0">v0.1.0</a>
             </li>
+            <li>
+                <a href="/code-studio/release-notes/v1.0.1">v1.0.1</a>
+            </li>
         </ul>
     </li>
     <li>Troubleshoot
