Included flutter steps

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -54,7 +54,10 @@
             </li>
             <li>
                 <a href="/code-studio/features/agent">Agent</a>
-            </li>           
+            </li>
+            <li>
+                <a href="/code-studio/features/ui-builder">UI Builder</a>
+            </li>
             <li>
                 <a href="/code-studio/features/checkpoints">Checkpoints</a>
             </li>
@@ -73,13 +76,13 @@
             <li>
                 <a href="/code-studio/features/applytocurrentfile">Apply To Current File</a>
             </li>
-            <!-- <li>
+            <li>
                 <a href="/code-studio/features/enhanceprompt">Enhance Prompt</a>
-            </li> -->
+            </li>
              <li>
                 <a href="/code-studio/features/summarize">Summarization</a>
             </li>
-            
+
 
             <li>Context providers
                 <ul>
@@ -156,7 +159,9 @@
             </li>
         </ul>
     </li>
-    <li> <a href="/code-studio/ui-builder">UI Builder</a> </li>
+    <li>
+        <a href="/code-studio/pre-installed-extensions.md">Pre-Installed Extensions</a>
+    </li>
     <li>
         <a href="/code-studio/reference/configure-the-code-studio">Configure the Syncfusion Code Studio</a>
         <ul>
@@ -178,18 +183,14 @@
     <li>Release Notes
         <ul>
             <li>
-                <a href="/code-studio/release-notes/v1.0.1">v1.0.1</a>
-            </li>
-            <li>
-                <a href="/code-studio/release-notes/v1.0.0">v1.0.0</a>
+                <a href="/code-studio/release-notes/v0.1.0">v0.1.0</a>
             </li>
             <li>
                 <a href="/code-studio/release-notes/v0.2.0">v0.2.0</a>
             </li>
-            <li>
-                <a href="/code-studio/release-notes/v0.1.0">v0.1.0</a>
+             <li>
+                <a href="/code-studio/release-notes/v1.0.0">v1.0.0</a>
             </li>
-             
         </ul>
     </li>
     <li>Troubleshoot
@@ -206,7 +207,13 @@
             <li> Application Debugging Steps
                 <ul>
                     <li>
-                        <a href="/code-studio/troubleshoot/debugging-steps/desktop-platforms">How to Debug Desktop Platform Applications in WinForms, WPF, WinUI Platforms?</a>
+                        <a href="/code-studio/troubleshoot/debugging-steps/desktop-platforms.md">How to Debug Desktop Platform Applications?</a>
+                    </li>
+                    <li>
+                        <a href="/code-studio/troubleshoot/debugging-steps/cross-platforms.md">How to Debug Cross Platform Applications?</a>
+                    </li>
+                    <li>
+                        <a href="/code-studio/troubleshoot/debugging-steps/debugging-steps.md">Debugging Workflow</a>
                     </li>
                 </ul>
             </li>
