Removed unnecessary changes

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -56,9 +56,6 @@
                 <a href="/code-studio/features/agent">Agent</a>
             </li>
             <li>
-                <a href="/code-studio/features/ui-builder">UI Builder</a>
-            </li>
-            <li>
                 <a href="/code-studio/features/checkpoints">Checkpoints</a>
             </li>
             <li>
@@ -76,14 +73,13 @@
             <li>
                 <a href="/code-studio/features/applytocurrentfile">Apply To Current File</a>
             </li>
-            <li>
+            <!---li>
                 <a href="/code-studio/features/enhanceprompt">Enhance Prompt</a>
-            </li>
+            </li>-->
              <li>
                 <a href="/code-studio/features/summarize">Summarization</a>
             </li>
-
-
+            
             <li>Context providers
                 <ul>
                     <li>
@@ -159,6 +155,7 @@
             </li>
         </ul>
     </li>
+    <li> <a href="/code-studio/ui-builder">UI Builder</a> </li>
     <li>
         <a href="/code-studio/pre-installed-extensions.md">Pre-Installed Extensions</a>
     </li>
@@ -183,14 +180,18 @@
     <li>Release Notes
         <ul>
             <li>
-                <a href="/code-studio/release-notes/v0.1.0">v0.1.0</a>
+                <a href="/code-studio/release-notes/v1.0.1">v1.0.1</a>
+            </li>
+            <li>
+                <a href="/code-studio/release-notes/v1.0.0">v1.0.0</a>
             </li>
             <li>
                 <a href="/code-studio/release-notes/v0.2.0">v0.2.0</a>
             </li>
-             <li>
-                <a href="/code-studio/release-notes/v1.0.0">v1.0.0</a>
+            <li>
+                <a href="/code-studio/release-notes/v0.1.0">v0.1.0</a>
             </li>
+             
         </ul>
     </li>
     <li>Troubleshoot
