--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -173,6 +173,8 @@
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/usersettings">User Settings</a></li>
             <li><a href="/code-studio/reference/configure-properties/toolssupport">Tools</a></li>
+            <li><a href="/code-studio/reference/configure-properties/how-to-add-local-and-BYOK-model">How to add local models and BYOK models</a></li>
+            <li><a href="/code-studio/reference/configure-properties/sfcodeignore">.Sfcodeignore</a></li>
         </ul>
     </li>
     <li>Release Notes
@@ -194,6 +196,9 @@
     </li>
     <li>Troubleshoot
         <ul>
+             <li>
+                <a href="/code-studio/troubleshoot/how-to-remove-cache-folders-of-code-studio-to-resolve-the-app-corruption">How to remove cache folders of code studio to resolve the app corruption</a>
+            </li>
             <li>
                 <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3 model in OpenAI Integration via OpenRouter</a>
             </li>
