server related for latest release

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -26,8 +26,15 @@
             <li>
                 <a href="/code-studio/enterprise-server/dashboard">Dashboard</a>
             </li>
+            <li>BYOK 
+                <ul>
             <li>
                 <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and Models</a>
+            </li>
+            <li>
+                <a href="/code-studio/enterprise-server/fallback">Fallback policy configuration</a>
+            </li>
+            </ul>
             </li>
              <li>
                 <a href="/code-studio/enterprise-server/userandteams">Manage Users and Teams</a>
@@ -36,8 +43,8 @@
                 <a href="/code-studio/enterprise-server/createbudget">Create Budget </a>
             </li>
              <li>
-                <a href="/code-studio/enterprise-server/fallback">Fallback policy configuration</a>
-            </li>
+                <a href="/code-studio/enterprise-server/settings">Settings </a>
+            </li>            
              
         </ul>
     </li>
