--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -187,6 +187,9 @@
     <li>Release Notes
         <ul>
             <li>
+                <a href="/code-studio/release-notes/v1.0.2">v1.0.2</a>
+            </li>
+            <li>
                 <a href="/code-studio/release-notes/v1.0.1">v1.0.1</a>
             </li>
             <li>
