--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -221,8 +221,8 @@
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/usersettings">User Settings</a></li>
             <li><a href="/code-studio/reference/configure-properties/toolssupport">Tools</a></li>
-            <li><a href="/code-studio/reference/configure-properties/how-to-add-local-and-BYOK-model">How to add local
-                    models and BYOK models</a></li>
+            <li><a href="/code-studio/reference/configure-properties/how-to-add-local-and-BYOK-model">How to Add Local
+                    Models</a></li>
             <li><a href="/code-studio/reference/configure-properties/sfcodeignore">.Sfcodeignore</a></li>
         </ul>
     </li>
